- Internal server errors are now properly reported back to the interface - Added option to disable idle mode while tab is hidden (not recommended) - Added option to show error toasts - Fixed subcategory headers not being hidden while category is collapsed - Bad gateway exceptions will now cause an immediate fail instead of sneaky retries - Tracks that have " feat. " without any special characters in the title will now get properly trimmed - Added "reprise" to whitelisted words - Renamed "Performance" category to "Performance / Misc"

--- a/src/main/resources/static/design/style.css
+++ b/src/main/resources/static/design/style.css
@@ -1612,7 +1612,7 @@ div#device {
     display: block;
 }
 
-#settings-categories .setting-category.collapse .setting {
+#settings-categories .setting-category.collapse > *:not(.setting-category-header) {
     display: none;
 }
 
